# SimpleHartreeFock

./: .gitignore  CMakeLists.txt  README.md
cmake/: armadillo.cmake  hdf5.cmake
data/: gen_data.py  hf.py  integral.py  plot.ipynb
data/h2/0.5000/: atoms.xyz  data.h5
data/h2/0.5417/: atoms.xyz  data.h5
data/h2/0.5833/: atoms.xyz  data.h5
data/h2/0.6250/: atoms.xyz  data.h5
data/h2/0.6667/: atoms.xyz  data.h5
data/h2/0.7083/: atoms.xyz  data.h5
data/h2/0.7500/: atoms.xyz  data.h5
data/h2/0.7917/: atoms.xyz  data.h5
data/h2/0.8333/: atoms.xyz  data.h5
data/h2/0.8750/: atoms.xyz  data.h5
data/h2/0.9167/: atoms.xyz  data.h5
data/h2/0.9583/: atoms.xyz  data.h5
data/h2/1.0000/: atoms.xyz  data.h5
data/h2/1.0417/: atoms.xyz  data.h5
data/h2/1.0833/: atoms.xyz  data.h5
data/h2/1.1250/: atoms.xyz  data.h5
data/h2/1.1667/: atoms.xyz  data.h5
data/h2/1.2083/: atoms.xyz  data.h5
data/h2/1.2500/: atoms.xyz  data.h5
data/h2/1.2917/: atoms.xyz  data.h5
data/h2/1.3333/: atoms.xyz  data.h5
data/h2/1.3750/: atoms.xyz  data.h5
data/h2/1.4167/: atoms.xyz  data.h5
data/h2/1.4583/: atoms.xyz  data.h5
data/h2/1.5000/: atoms.xyz  data.h5
data/h2/1.5417/: atoms.xyz  data.h5
data/h2/1.5833/: atoms.xyz  data.h5
data/h2/1.6250/: atoms.xyz  data.h5
data/h2/1.6667/: atoms.xyz  data.h5
data/h2/1.7083/: atoms.xyz  data.h5
data/h2/1.7500/: atoms.xyz  data.h5
data/h2/1.7917/: atoms.xyz  data.h5
data/h2/1.8333/: atoms.xyz  data.h5
src/: hartreefock.cxx  integral.cxx  mol.cxx  rhf.cxx  utils.h
test/: test_mol.cxx
(+300 files in other folders)
